@@ -16,6 +16,7 @@ Release 0.4-0 (//):
   * Kill client when 3 consecutive C-c's detected.
   * Add inwhileloop().
   * Fix Rstudio help().
+  * Fix warnings problem by reseting status at server and options(warn = 1).
 
 Release 0.3-2 (4/28/2016):
   * Minor internal cleanup.
